--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.0",
+    "axios": "^1.2.5",
     "clsx": "^1.2.1",
     "jotai": "^1.13.1",
     "react": "^18.2.0",
