--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
+    "swr": "^2.0.3",
     "tailwind-merge": "^1.8.1"
   },
   "devDependencies": {
