--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.0",
-    "axios": "^1.2.5",
+    "axios": "^1.2.6",
     "clsx": "^1.2.1",
-    "jotai": "^1.13.1",
+    "jotai": "^2.0.0",
+    "lucide-react": "^0.108.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "swr": "^2.0.3",
-    "tailwind-merge": "^1.8.1"
+    "tailwind-merge": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.0.4"
   }
 }
