--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.0",
+    "@tanstack/react-table": "^8.7.9",
     "axios": "^1.3.0",
     "clsx": "^1.2.1",
     "jotai": "^2.0.0",
