--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-context-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.0",
     "@tanstack/react-table": "^8.7.9",
-    "axios": "^1.3.0",
+    "axios": "^1.3.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "jotai": "^2.0.0",
@@ -28,7 +29,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "@vitejs/plugin-react-swc": "^3.0.1",
+    "@vitejs/plugin-react-swc": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
@@ -39,6 +40,6 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
-    "vite": "^4.0.4"
+    "vite": "^4.1.1"
   }
 }
