--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jotai": "^2.0.0",
     "lucide-react": "^0.108.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "swr": "^2.0.3",
