--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-tabs": "^1.0.3",
     "@tanstack/react-table": "^8.8.5",
+    "@tanstack/react-virtual": "3.0.0-beta.54",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
