--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
+    "immer": "^10.0.1",
     "jotai": "^2.0.4",
     "lucide-react": "^0.130.1",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "swr": "^2.1.3",
