--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@radix-ui/react-tabs": "^1.0.3",
     "@tanstack/react-table": "^8.8.5",
     "@tanstack/react-virtual": "3.0.0-beta.54",
-    "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "immer": "^10.0.1",
@@ -28,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "swr": "^2.1.3",
-    "tailwind-merge": "^1.12.0"
+    "tailwind-merge": "^1.12.0",
+    "wretch": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
