--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "immer": "^10.0.1",
     "jotai": "^2.0.4",
+    "jotai-optics": "^0.3.0",
     "lucide-react": "^0.130.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
