--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.10.0",
     "swr": "^2.1.3",
     "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "wretch": "^2.5.2"
   },
   "devDependencies": {
