--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tabs": "^1.0.3",
     "@tanstack/react-table": "^8.8.5",
     "@tanstack/react-virtual": "3.0.0-beta.54",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "immer": "^10.0.1",
