--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.2",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-switch": "^1.0.2",
@@ -23,6 +24,7 @@
     "@tanstack/react-virtual": "3.0.0-beta.54",
     "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "dayjs": "^1.11.7",
     "immer": "^10.0.1",
     "jotai": "^2.0.4",
