--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@tanstack/react-table": "^8.9.1",
-    "@tanstack/react-virtual": "3.0.0-beta.54",
-    "class-variance-authority": "^0.5.3",
+    "@tanstack/react-virtual": "^3.0.0-beta.54",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.7",
@@ -43,7 +43,7 @@
     "wretch": "^2.5.2"
   },
   "devDependencies": {
-    "@types/node": "^18.16.8",
+    "@types/node": "^20.1.4",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
