--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "wretch": "^2.6.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
