--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-table": "^8.10.0",
-    "@tanstack/react-virtual": "3.0.0-beta.60",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.10",
@@ -41,6 +40,7 @@
     "swr": "^2.2.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "virtua": "^0.9.0",
     "wretch": "^2.7.0"
   },
   "devDependencies": {
