--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^2.0.20",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
