--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jotai": "^2.9.0",
     "jotai-optics": "^0.4.0",
     "lucide-react": "^0.408.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
